fix: paragraph spacings

--- a/src/components/A11yStatusTable/a11y-status-table.module.scss
+++ b/src/components/A11yStatusTable/a11y-status-table.module.scss
@@ -8,7 +8,8 @@
   top: $spacing-01;
 }
 
-.version {
+.version,
+.moreLink {
   --space: 1.5rem;
 }
 
